# python-crash-course

./: .gitignore  README.md  pyproject.toml
src/python_crash_course/ch11_testing_your_code/: name_function.py  pytest.py  test_name_function.py
src/python_crash_course/ch11_testing_your_code/exercises/: 11.1_city_country.py  11.2_population.py  city_functions.py  test_cities.py
