[project]
name = "python-crash-course"
version = "0.1.0"
description = "A collection of scripts for the 'Python Crash Course' book."
authors = [
    {name = "Lu Yucheng", email = "24126655@bjtu.edu.cn"},
]
requires-python = "==3.11.*"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
